# cli

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  flake.nix  shell.nix
docs/: README.md
examples/: imap_wizard.rs  spinner.rs
src/: build.rs  error.rs  imap.rs  lib.rs  log.rs  printer.rs  prompt.rs  spinner.rs  table.rs  validator.rs
src/clap/: args.rs  mod.rs  parsers.rs
src/clap/commands/: completion.rs  manual.rs  mod.rs
src/wizard/: caldav.rs  carddav.rs  imap.rs  jmap.rs  keyring.rs  mod.rs  smtp.rs
