[package]
name = "pimalaya-cli"
description = "Collection of CLI tools for Pimalaya"
version = "0.0.2"
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2024"
rust-version = "1.87"
license = "MIT"
categories = []
keywords = ["pimalaya", "cli"]
homepage = "https://pimalaya.org"
documentation = "https://docs.rs/pimalaya-cli/latest/pimalaya_cli"
repository = "https://github.com/pimalaya/cli"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
prompt = ["dep:inquire", "dep:secrecy", "dep:thiserror"]
imap = ["dep:secrecy"]
smtp = ["dep:secrecy"]
jmap = ["dep:secrecy"]
caldav = ["dep:secrecy"]
carddav = ["dep:secrecy"]
wizard = ["prompt"]
terminal = ["dep:anyhow", "dep:clap", "dep:clap_complete", "dep:clap_mangen", "dep:env_logger", "dep:serde", "dep:serde_json", "dep:shellexpand"]
build = ["dep:git2", "dep:serde", "dep:toml"]
table = ["dep:comfy-table"]
spinner = ["dep:crossterm", "dep:ctrlc"]

[[example]]
name = "imap-wizard"
path = "examples/imap_wizard.rs"
required-features = ["wizard", "imap"]

[[example]]
name = "spinner"
path = "examples/spinner.rs"
required-features = ["spinner"]

[dependencies]
anyhow = { version = "1", optional = true }
clap = { version = "4.4", default-features = false, features = ["std", "derive", "wrap_help"], optional = true }
clap_complete = { version = "4.4", optional = true }
clap_mangen = { version = "0.3", optional = true }
comfy-table = { version = "7", optional = true }
crossterm = { version = "0.29", optional = true }
ctrlc = { version = "3", features = ["termination"], optional = true }
env_logger = { version = "0.11", default-features = false, features = ["auto-color"], optional = true }
git2 = { version = "0.21", default-features = false, optional = true }
inquire = { version = "0.9", optional = true }
log = "0.4"
secrecy = { version = "0.10", features = ["serde"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
shellexpand = { version = "3.1", optional = true }
thiserror = { version = "2", optional = true }
toml = { version = "0.8", optional = true }
